TestCases/ASTTests/SemanticErrorsTests/createTests/read_file_after.dot
digraph AST {
  "124210209821536" [label="Start"];
  "124210209821536" -> "124210209819328";
  "124210209819328" [label="Code"];
  "124210209819328" -> "124210209832720";
  "124210209832720" [label="Function"];
  "124210209832720" -> "124210209827968";
  "124210209832720" -> "124210209828928";
  "124210209832720" -> "124210209832048";
  "124210209827968" [label="main IDENTIFIER"];
  "124210209828928" [label="Parameters"];
  "124210209832048" [label="Code"];
  "124210209832048" -> "124210209831712";
  "124210209832048" -> "124210209828784";
  "124210209832048" -> "124210209818224";
  "124210209831712" [label="Code"];
  "124210209831712" -> "124210209831856";
  "124210209831856" [label="Declaration"];
  "124210209831856" -> "124210209832864";
  "124210209831856" -> "124210209821008";
  "124210209832864" [label="x IDENTIFIER"];
  "124210209821008" [label="1 INT"];
  "124210209828784" [label="Code"];
  "124210209828784" -> "124210209831520";
  "124210209831520" [label="Declaration"];
  "124210209831520" -> "124210209982208";
  "124210209831520" -> "124210209982256";
  "124210209982208" [label="x IDENTIFIER"];
  "124210209982256" [label="2 INT"];
  "124210209818224" [label="Return"];
  "124210209818224" -> "124210209982304";
  "124210209982304" [label="0 INT"];
}
